populating queue through management API
