# pkg/api/v1/task.pb.go
@@ -27,6 +27,37 @@ var _ = math.Inf
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
+type Task_Protocol int32
+
+const (
+	Task_TCP  Task_Protocol = 0
+	Task_HTTP Task_Protocol = 1
+	Task_GRPC Task_Protocol = 2
+	Task_UDP  Task_Protocol = 3
+)
+
+var Task_Protocol_name = map[int32]string{
+	0: "TCP",
+	1: "HTTP",
+	2: "GRPC",
+	3: "UDP",
+}
+
+var Task_Protocol_value = map[string]int32{
+	"TCP":  0,
+	"HTTP": 1,
+	"GRPC": 2,
+	"UDP":  3,
+}
+
+func (x Task_Protocol) String() string {
+	return proto.EnumName(Task_Protocol_name, int32(x))
+}
+
+func (Task_Protocol) EnumDescriptor() ([]byte, []int) {
+	return fileDescriptor_ce5d8dd45b4a91ff, []int{0, 0}
+}
+
 // Generic Interaction Task
 type Task struct {
 	// Unique integer identifier of the task
@@ -35,8 +66,10 @@ type Task struct {
 	Title string `protobuf:"bytes,2,opt,name=title,proto3" json:"title,omitempty"`
 	// Detail description of the task
 	Description string `protobuf:"bytes,3,opt,name=description,proto3" json:"description,omitempty"`
+	// type of task
+	Protocol Task_Protocol `protobuf:"varint,4,opt,name=protocol,proto3,enum=v1.Task_Protocol" json:"protocol,omitempty"`
 	// Date and time to remind the task
-	Reminder             *timestamp.Timestamp `protobuf:"bytes,4,opt,name=reminder,proto3" json:"reminder,omitempty"`
+	Reminder             *timestamp.Timestamp `protobuf:"bytes,5,opt,name=reminder,proto3" json:"reminder,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}             `json:"-"`
 	XXX_unrecognized     []byte               `json:"-"`
 	XXX_sizecache        int32                `json:"-"`
@@ -86,6 +119,13 @@ func (m *Task) GetDescription() string {
 		return m.Description
 	}
 	return ""
+}
+
+func (m *Task) GetProtocol() Task_Protocol {
+	if m != nil {
+		return m.Protocol
+	}
+	return Task_TCP
 }
 
 func (m *Task) GetReminder() *timestamp.Timestamp {
@@ -589,6 +629,7 @@ func (m *ReadAllResponse) GetTask() []*Task {
 }
 
 func init() {
+	proto.RegisterEnum("v1.Task_Protocol", Task_Protocol_name, Task_Protocol_value)
 	proto.RegisterType((*Task)(nil), "v1.Task")
 	proto.RegisterType((*CreateRequest)(nil), "v1.CreateRequest")
 	proto.RegisterType((*CreateResponse)(nil), "v1.CreateResponse")
@@ -605,49 +646,53 @@ func init() {
 func init() { proto.RegisterFile("task.proto", fileDescriptor_ce5d8dd45b4a91ff) }
 
 var fileDescriptor_ce5d8dd45b4a91ff = []byte{
-	// 667 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x54, 0xcd, 0x4e, 0xdb, 0x4a,
-	0x14, 0x96, 0xed, 0xdc, 0x00, 0x27, 0x3f, 0x70, 0x07, 0xee, 0xbd, 0x91, 0x85, 0x74, 0x2d, 0xaf,
-	0x50, 0x54, 0x6c, 0xe2, 0x22, 0x16, 0x29, 0x2a, 0xd0, 0xa2, 0x8a, 0xb5, 0x4b, 0x37, 0x95, 0xba,
-	0x98, 0xd8, 0xa7, 0xce, 0x80, 0xe3, 0x71, 0x3d, 0x93, 0xd0, 0xaa, 0x62, 0xd3, 0x45, 0xd7, 0x55,
-	0xbb, 0xeb, 0xeb, 0x74, 0xd1, 0x07, 0xe8, 0x2b, 0xf4, 0x41, 0x2a, 0x8f, 0xed, 0x80, 0x81, 0xa0,
-	0x4a, 0x5d, 0xd9, 0x73, 0xe6, 0x3b, 0xdf, 0xf7, 0x9d, 0x1f, 0x0d, 0x80, 0xa4, 0xe2, 0xdc, 0x49,
-	0x33, 0x2e, 0x39, 0xd1, 0x67, 0x03, 0xf3, 0xff, 0x88, 0xf3, 0x28, 0x46, 0x57, 0x45, 0x46, 0xd3,
-	0xd7, 0xae, 0x64, 0x13, 0x14, 0x92, 0x4e, 0xd2, 0x02, 0x64, 0x6e, 0x96, 0x00, 0x9a, 0x32, 0x97,
-	0x26, 0x09, 0x97, 0x54, 0x32, 0x9e, 0x88, 0xf2, 0xf6, 0x81, 0xfa, 0x04, 0xdb, 0x11, 0x26, 0xdb,
-	0xe2, 0x82, 0x46, 0x11, 0x66, 0x2e, 0x4f, 0x15, 0xe2, 0x36, 0xda, 0xfe, 0xa8, 0x41, 0xe3, 0x94,
-	0x8a, 0x73, 0xd2, 0x05, 0x9d, 0x85, 0x3d, 0xcd, 0xd2, 0xb6, 0x0c, 0x5f, 0x67, 0x21, 0xd9, 0x80,
-	0xbf, 0x24, 0x93, 0x31, 0xf6, 0x74, 0x4b, 0xdb, 0x5a, 0xf1, 0x8b, 0x03, 0xb1, 0xa0, 0x15, 0xa2,
-	0x08, 0x32, 0xa6, 0x08, 0x7b, 0x86, 0xba, 0xbb, 0x1e, 0x22, 0x7b, 0xb0, 0x9c, 0xe1, 0x84, 0x25,
-	0x21, 0x66, 0xbd, 0x86, 0xa5, 0x6d, 0xb5, 0x3c, 0xd3, 0x29, 0xfc, 0x3a, 0x55, 0x41, 0xce, 0x69,
-	0x55, 0x90, 0x3f, 0xc7, 0xda, 0x07, 0xd0, 0x79, 0x9a, 0x21, 0x95, 0xe8, 0xe3, 0x9b, 0x29, 0x0a,
-	0x49, 0xd6, 0xc0, 0xa0, 0x29, 0x53, 0x8e, 0x56, 0xfc, 0xfc, 0x97, 0x6c, 0x42, 0x23, 0x6f, 0x95,
-	0x72, 0xd4, 0xf2, 0x96, 0x9d, 0xd9, 0xc0, 0xc9, 0xad, 0xfb, 0x2a, 0x6a, 0x7b, 0xd0, 0xad, 0x08,
-	0x44, 0xca, 0x13, 0x81, 0x77, 0x30, 0x14, 0x45, 0xea, 0x55, 0x91, 0xb6, 0x0b, 0x2d, 0x1f, 0x69,
-	0xb8, 0x58, 0xf2, 0x66, 0xc2, 0x63, 0x68, 0x17, 0x09, 0x0b, 0x25, 0xee, 0x37, 0x79, 0x00, 0x9d,
-	0x17, 0x69, 0xf8, 0x07, 0x55, 0xee, 0x43, 0xb7, 0x22, 0x58, 0x68, 0xa1, 0x07, 0x4b, 0x53, 0x85,
-	0xa9, 0x9c, 0x57, 0x47, 0x7b, 0x00, 0x9d, 0x63, 0x8c, 0xf1, 0x3e, 0xf9, 0x9b, 0x15, 0xef, 0x43,
-	0xb7, 0x4a, 0xb9, 0x4f, 0x30, 0x54, 0x98, 0xb9, 0x60, 0x79, 0xb4, 0x6d, 0xe8, 0xe6, 0xfd, 0x3a,
-	0x8a, 0xe3, 0x85, 0x8a, 0xf6, 0x11, 0xac, 0xce, 0x31, 0xbf, 0xd1, 0x56, 0xe3, 0x76, 0x57, 0xbc,
-	0x4f, 0x06, 0xb4, 0xf2, 0xe3, 0x73, 0xcc, 0x66, 0x2c, 0x40, 0x72, 0x02, 0x4b, 0x25, 0x25, 0x21,
-	0x39, 0xb4, 0xee, 0xc1, 0x5c, 0xaf, 0xc5, 0x0a, 0x4d, 0x7b, 0xe3, 0xc3, 0x8f, 0x9f, 0x5f, 0xf4,
-	0x2e, 0x69, 0xbb, 0xb3, 0x81, 0x9b, 0xb3, 0xba, 0x34, 0x8e, 0xc9, 0x31, 0x34, 0x8b, 0xad, 0x22,
-	0x7f, 0xe7, 0x49, 0xb5, 0x15, 0x35, 0xc9, 0xf5, 0x50, 0x49, 0xb3, 0xae, 0x68, 0x3a, 0xf6, 0x72,
-	0x45, 0x33, 0xd4, 0xfa, 0xe4, 0x10, 0x1a, 0xb9, 0x1c, 0x59, 0xad, 0x84, 0x2b, 0x86, 0xb5, 0xab,
-	0x40, 0x99, 0xff, 0x8f, 0xca, 0x5f, 0x25, 0x9d, 0xb9, 0x8d, 0xf7, 0x2c, 0xbc, 0x24, 0x11, 0x34,
-	0x8b, 0xb9, 0x17, 0x3e, 0x6a, 0x4b, 0x54, 0xf8, 0xa8, 0xaf, 0x85, 0xbd, 0xa7, 0x78, 0x76, 0x4c,
-	0x72, 0xc5, 0xa3, 0xde, 0x19, 0x16, 0x5e, 0x0e, 0xb5, 0xfe, 0xcb, 0xff, 0xbc, 0xbb, 0x2f, 0xc8,
-	0x33, 0x68, 0x16, 0xf3, 0x2e, 0x84, 0x6a, 0xeb, 0x52, 0x08, 0xd5, 0xd7, 0xa1, 0x32, 0xdc, 0xaf,
-	0x1b, 0x7e, 0xf2, 0x5d, 0xfb, 0x7c, 0xf4, 0x4d, 0x23, 0xaf, 0xa0, 0x9d, 0x0f, 0xc6, 0x2a, 0x27,
-	0x63, 0x9f, 0x40, 0x1b, 0x83, 0x31, 0xb7, 0xd2, 0x8c, 0x9f, 0x61, 0x20, 0x89, 0x35, 0x96, 0x32,
-	0x15, 0x43, 0xd7, 0x8d, 0x98, 0x1c, 0x4f, 0x47, 0x4e, 0xc0, 0x27, 0x6e, 0xc0, 0x67, 0x34, 0x63,
-	0xf2, 0x9d, 0x9b, 0x23, 0xcd, 0x7f, 0x47, 0x98, 0x38, 0x38, 0x12, 0x17, 0x3c, 0x93, 0xe3, 0xc3,
-	0x68, 0x42, 0x59, 0x9c, 0xa3, 0x3c, 0x63, 0xe0, 0xec, 0xf4, 0x35, 0xcd, 0x5b, 0xa3, 0x69, 0x1a,
-	0xb3, 0x40, 0xbd, 0x6a, 0xee, 0x99, 0xe0, 0xc9, 0xf0, 0x56, 0xc4, 0x7f, 0x04, 0xc6, 0xee, 0xce,
-	0x2e, 0xd9, 0x85, 0xbe, 0x8f, 0x72, 0x9a, 0x25, 0x18, 0x5a, 0x17, 0x63, 0x4c, 0x2c, 0x39, 0x46,
-	0x2b, 0x43, 0xc1, 0xa7, 0x59, 0x80, 0x56, 0xc8, 0x51, 0x58, 0x09, 0x97, 0x16, 0xbe, 0x65, 0x42,
-	0x3a, 0xa4, 0x09, 0x8d, 0xaf, 0xba, 0xb6, 0x34, 0x6a, 0xaa, 0x77, 0xeb, 0xe1, 0xaf, 0x00, 0x00,
-	0x00, 0xff, 0xff, 0x0a, 0xe5, 0x14, 0x7f, 0xa8, 0x05, 0x00, 0x00,
+	// 726 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x54, 0xcd, 0x4e, 0xdb, 0x58,
+	0x14, 0x1e, 0xdb, 0x21, 0x09, 0x27, 0x3f, 0x64, 0x2e, 0xcc, 0x4c, 0x14, 0x21, 0x8d, 0xe5, 0x55,
+	0x14, 0x0d, 0x76, 0xe2, 0x41, 0x2c, 0x52, 0x54, 0xa0, 0xa0, 0x96, 0x65, 0xe4, 0x86, 0x4d, 0xa5,
+	0x2e, 0x1c, 0xfb, 0xd4, 0xb9, 0xe0, 0xf8, 0xba, 0xf6, 0x4d, 0x68, 0x55, 0xb1, 0xe9, 0x13, 0x54,
+	0xed, 0xae, 0xaf, 0xd3, 0x45, 0x1f, 0xa0, 0xaf, 0x50, 0xa9, 0xaf, 0x51, 0xf9, 0xda, 0x0e, 0x18,
+	0x08, 0xaa, 0xd4, 0x55, 0x7c, 0xcf, 0xfd, 0xce, 0xf7, 0x7d, 0xe7, 0x27, 0x17, 0x80, 0xdb, 0xf1,
+	0x85, 0x1e, 0x46, 0x8c, 0x33, 0x22, 0x2f, 0x06, 0x9d, 0x7f, 0x3d, 0xc6, 0x3c, 0x1f, 0x0d, 0x11,
+	0x99, 0xcc, 0x5f, 0x19, 0x9c, 0xce, 0x30, 0xe6, 0xf6, 0x2c, 0x4c, 0x41, 0x9d, 0xed, 0x0c, 0x60,
+	0x87, 0xd4, 0xb0, 0x83, 0x80, 0x71, 0x9b, 0x53, 0x16, 0xc4, 0xd9, 0xed, 0x7f, 0xe2, 0xc7, 0xd9,
+	0xf1, 0x30, 0xd8, 0x89, 0x2f, 0x6d, 0xcf, 0xc3, 0xc8, 0x60, 0xa1, 0x40, 0xdc, 0x45, 0x6b, 0x3f,
+	0x24, 0x28, 0x8d, 0xed, 0xf8, 0x82, 0x34, 0x41, 0xa6, 0x6e, 0x5b, 0x52, 0xa5, 0xae, 0x62, 0xc9,
+	0xd4, 0x25, 0x5b, 0xb0, 0xc6, 0x29, 0xf7, 0xb1, 0x2d, 0xab, 0x52, 0x77, 0xdd, 0x4a, 0x0f, 0x44,
+	0x85, 0x9a, 0x8b, 0xb1, 0x13, 0x51, 0x41, 0xd8, 0x56, 0xc4, 0xdd, 0xcd, 0x10, 0xd9, 0x81, 0x6a,
+	0x6a, 0x80, 0xf9, 0xed, 0x92, 0x2a, 0x75, 0x9b, 0xe6, 0x9f, 0xfa, 0x62, 0xa0, 0x27, 0x1a, 0xfa,
+	0x28, 0xbb, 0xb0, 0x96, 0x10, 0xb2, 0x07, 0xd5, 0x08, 0x67, 0x34, 0x70, 0x31, 0x6a, 0xaf, 0xa9,
+	0x52, 0xb7, 0x66, 0x76, 0xf4, 0xb4, 0x3c, 0x3d, 0xaf, 0x5f, 0x1f, 0xe7, 0xf5, 0x5b, 0x4b, 0xac,
+	0xd6, 0x87, 0x6a, 0xce, 0x46, 0x2a, 0xa0, 0x8c, 0x8f, 0x47, 0xad, 0x3f, 0x48, 0x15, 0x4a, 0xa7,
+	0xe3, 0xf1, 0xa8, 0x25, 0x25, 0x5f, 0xcf, 0xac, 0xd1, 0x71, 0x4b, 0x4e, 0x2e, 0xcf, 0x4e, 0x46,
+	0x2d, 0x45, 0x3b, 0x80, 0xc6, 0x71, 0x84, 0x36, 0x47, 0x0b, 0x5f, 0xcf, 0x31, 0xe6, 0xa4, 0x05,
+	0x8a, 0x1d, 0x52, 0x51, 0xf2, 0xba, 0x95, 0x7c, 0x92, 0x6d, 0x28, 0x25, 0xb3, 0x10, 0x25, 0xd7,
+	0xcc, 0x6a, 0xee, 0xdb, 0x12, 0x51, 0xcd, 0x84, 0x66, 0x4e, 0x10, 0x87, 0x2c, 0x88, 0xf1, 0x1e,
+	0x86, 0xb4, 0x8b, 0x72, 0xde, 0x45, 0xcd, 0x80, 0x9a, 0x85, 0xb6, 0xbb, 0x5a, 0xf2, 0x76, 0xc2,
+	0x63, 0xa8, 0xa7, 0x09, 0x2b, 0x25, 0x1e, 0x36, 0x79, 0x00, 0x8d, 0xb3, 0xd0, 0xfd, 0x8d, 0x2a,
+	0xf7, 0xa1, 0x99, 0x13, 0xac, 0xb4, 0xd0, 0x86, 0xca, 0x5c, 0x60, 0x72, 0xe7, 0xf9, 0x51, 0x1b,
+	0x40, 0xe3, 0x04, 0x7d, 0x7c, 0x48, 0xfe, 0x76, 0xc5, 0xfb, 0xd0, 0xcc, 0x53, 0x1e, 0x12, 0x74,
+	0x05, 0x66, 0x29, 0x98, 0x1d, 0x35, 0x0d, 0x9a, 0x49, 0xbf, 0x8e, 0x7c, 0x7f, 0xa5, 0xa2, 0x76,
+	0x04, 0x1b, 0x4b, 0xcc, 0x2f, 0xb4, 0x55, 0xb9, 0xdb, 0x15, 0xf3, 0x83, 0x02, 0xb5, 0xe4, 0xf8,
+	0x1c, 0xa3, 0x05, 0x75, 0x90, 0x9c, 0x42, 0x25, 0xa3, 0x24, 0x24, 0x81, 0x16, 0x3d, 0x74, 0x36,
+	0x0b, 0xb1, 0x54, 0x53, 0xdb, 0x7a, 0xff, 0xed, 0xfb, 0x27, 0xb9, 0x49, 0xea, 0xc6, 0x62, 0x60,
+	0x24, 0xac, 0x86, 0xed, 0xfb, 0xe4, 0x04, 0xca, 0xe9, 0x56, 0x11, 0xf1, 0x3f, 0x29, 0xac, 0x68,
+	0x87, 0xdc, 0x0c, 0x65, 0x34, 0x9b, 0x82, 0xa6, 0xa1, 0x55, 0x73, 0x9a, 0xa1, 0xd4, 0x23, 0x87,
+	0x50, 0x4a, 0xe4, 0xc8, 0x46, 0x2e, 0x9c, 0x33, 0xb4, 0xae, 0x03, 0x59, 0xfe, 0x5f, 0x22, 0x7f,
+	0x83, 0x34, 0x96, 0x36, 0xde, 0x51, 0xf7, 0x8a, 0x78, 0x50, 0x4e, 0xe7, 0x9e, 0xfa, 0x28, 0x2c,
+	0x51, 0xea, 0xa3, 0xb8, 0x16, 0xda, 0x9e, 0xe0, 0xe9, 0x77, 0xc8, 0x35, 0x8f, 0x78, 0xc8, 0xa8,
+	0x7b, 0x35, 0x94, 0x7a, 0x2f, 0xfe, 0x31, 0xef, 0xbf, 0x20, 0x4f, 0xa1, 0x9c, 0xce, 0x3b, 0x15,
+	0x2a, 0xac, 0x4b, 0x2a, 0x54, 0x5c, 0x87, 0xdc, 0x70, 0xaf, 0x68, 0xf8, 0xc9, 0x57, 0xe9, 0xe3,
+	0xd1, 0x17, 0x89, 0xbc, 0x84, 0x7a, 0x32, 0x18, 0x35, 0x9b, 0x8c, 0x76, 0x0a, 0x75, 0x74, 0xa6,
+	0x4c, 0x0d, 0x23, 0x76, 0x8e, 0x0e, 0x27, 0xea, 0x94, 0xf3, 0x30, 0x1e, 0x1a, 0x86, 0x47, 0xf9,
+	0x74, 0x3e, 0xd1, 0x1d, 0x36, 0x33, 0x1c, 0xb6, 0xb0, 0x23, 0xca, 0xdf, 0x1a, 0x09, 0xb2, 0xf3,
+	0xf7, 0x04, 0x03, 0x1d, 0x27, 0xf1, 0x25, 0x8b, 0xf8, 0xf4, 0xd0, 0x9b, 0xd9, 0xd4, 0x4f, 0x50,
+	0xa6, 0x32, 0xd0, 0xfb, 0x3d, 0x49, 0x32, 0x5b, 0x76, 0x18, 0xfa, 0xd4, 0x11, 0xcf, 0xa6, 0x71,
+	0x1e, 0xb3, 0x60, 0x78, 0x27, 0x62, 0x3d, 0x02, 0x65, 0xb7, 0xbf, 0x4b, 0x76, 0xa1, 0x67, 0x21,
+	0x9f, 0x47, 0x01, 0xba, 0xea, 0xe5, 0x14, 0x03, 0x95, 0x4f, 0x51, 0x8d, 0x30, 0x66, 0xf3, 0xc8,
+	0x41, 0xd5, 0x65, 0x18, 0xab, 0x01, 0xe3, 0x2a, 0xbe, 0xa1, 0x31, 0xd7, 0x49, 0x19, 0x4a, 0x9f,
+	0x65, 0xa9, 0x32, 0x29, 0x8b, 0x97, 0xee, 0xff, 0x9f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xb4, 0xe1,
+	0xc9, 0x85, 0x09, 0x06, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
